# voipaudit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_caller_id_spoofing.py  test_dashboard.py  test_db.py  test_invite_probe.py  test_pcap_analysis.py  test_pcap_tcp.py  test_pcap_tls.py  test_refer_transfer_abuse.py  test_srtp_check.py  test_toll_fraud.py  test_transfer_confirm.py  test_voipaudit.py
tests/fixtures/cdr/: sample_master.csv
tests/fixtures/mock_pbx/: invite_responder.py  server.py  tls_pcap.py
tests/fixtures/mock_pbx/certs/: cert.pem  key.pem
voipaudit/: cli.py
voipaudit/analyzers/: toll_fraud.py
voipaudit/core/: audit_log.py  authorization.py  cdr.py  db.py  engagement.py  invite_probe.py  models.py  pcap_parser.py  rate_limit.py  sdp.py  sip.py  sip_message.py  transfer_confirm.py
voipaudit/dashboard/: app.py
voipaudit/plugins/: __init__.py  base.py  caller_id_spoofing.py  pbx_fingerprint.py  refer_transfer_abuse.py  register_exposed.py  srtp_check.py  toll_fraud_exposure.py  transport_security.py
voipaudit/reports/: terminal.py
